<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent" xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.ibm.bluemix.appid.cloud.directory.android.sample.appid.SignUpSuccessActivity">

    <ProgressBar
        android:id="@+id/loadingSpinner"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="invisible" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg"
        android:orientation="vertical"
        android:weightSum="10"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:gravity="center"
        tools:layout_editor_absoluteX="42dp"
        tools:layout_editor_absoluteY="1dp">

        <ImageView
            android:id="@+id/bluemixLand"
            android:layout_width="254dp"
            android:layout_height="133dp"
            android:layout_gravity="center"
            android:contentDescription="@string/bluemix_land"
            app:srcCompat="@drawable/logo_bluemix_land" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="277dp"
            android:layout_height="78dp"
            android:layout_weight="1"
            android:text="@string/hello"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="36sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="41dp"
            tools:layout_editor_absoluteY="68dp" />

        <TextView
            android:id="@+id/formattedName"
            android:layout_width="276dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:text="TextView"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            tools:layout_editor_absoluteX="42dp"
            tools:layout_editor_absoluteY="146dp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="277dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/check_your_email_inbox"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            tools:layout_editor_absoluteX="41dp"
            tools:layout_editor_absoluteY="206dp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/hanvnt_got_email"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="41dp"
            tools:layout_editor_absoluteY="206dp" />

        <Button
            android:id="@+id/resendEmail"
            android:layout_width="136dp"
            android:layout_height="34dp"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:background="@drawable/button"
            android:fontFamily="sans-serif"
            android:hapticFeedbackEnabled="false"
            android:onClick="resendEmail"
            android:text="@string/resend_email"
            android:textAlignment="center"
            android:textColor="#25467A"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:background="@drawable/button"
            tools:layout_editor_absoluteX="136dp"
            tools:layout_editor_absoluteY="254dp" />

    </LinearLayout>
</RelativeLayout>

