<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2016, 2017 IBM Corp.
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg"
        android:orientation="vertical"
        android:weightSum="10"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center_vertical"
            android:orientation="vertical"

            android:weightSum="10"
            tools:ignore="InefficientWeight,UselessParent">


            <ImageView
                android:id="@+id/bluemixLand"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/bluemix_land"
                app:srcCompat="@drawable/logo_bluemix_land" />

            <LinearLayout
                android:layout_width="325dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@android:color/background_light"
                    android:drawableStart="@drawable/username"
                    android:ems="10"
                    android:inputType="textEmailAddress"
                    android:labelFor="@+id/email"
                    android:maxLines="1"
                    android:textColor="@android:color/white"
                    android:textCursorDrawable="@null" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@android:color/background_light"
                    android:drawableStart="@drawable/password"
                    android:ems="10"
                    android:imeOptions="actionSend"
                    android:inputType="textPassword"
                    android:labelFor="@+id/password"
                    android:maxLines="1"
                    android:textColor="@android:color/white"
                    android:textCursorDrawable="@null" />

                <TextView
                    android:id="@+id/forgotPassword"
                    android:layout_width="148dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:clickable="true"
                    android:onClick="onForgotPasswordClick"
                    android:text="@string/ForgotPassword"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textSize="18sp" android:focusable="true"/>

                <Button
                    android:id="@+id/loginButton"
                    android:layout_width="131dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="20dp"
                    android:layout_marginLeft="120dp"
                    android:layout_marginRight="120dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/button"
                    android:fontFamily="sans-serif"
                    android:hapticFeedbackEnabled="false"
                    android:onClick="onLoginClick"
                    android:text="@string/login"
                    android:textColor="#25467A"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:background="@drawable/button" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/dontHave"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:text="@string/don_t_have_an_account"
                        android:textAlignment="center"
                        android:textColor="@android:color/white"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/signUp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:clickable="true"
                        android:onClick="onSignUpClick"
                        android:text="@string/sign_up"
                        android:textAlignment="center"
                        android:textColor="@android:color/white"
                        android:textSize="18sp" android:focusable="true"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/loadingSpinner"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="invisible"
        tools:visibility="invisible" />

</RelativeLayout>
