<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2016, 2017 IBM Corp.
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_after_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:scrollbars="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <RelativeLayout
            android:id="@+id/giftLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorButton"
            android:clickable="true">

            <TextView
                android:id="@+id/textViewGift"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="21dp"
                android:text="@string/bluemix_land"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:layout_centerVertical="true"
                android:layout_alignParentStart="true"
                tools:ignore="RelativeOverlap" />

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:adjustViewBounds="true"
                android:background="@android:color/transparent"
                android:contentDescription="@string/profile_icon"
                android:elevation="0dp"
                android:maxWidth="40dp"
                android:onClick="showPopup"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/profile_icon" />

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/userLayout"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:layout_alignParentBottom="true"
            android:layout_below="@+id/giftLayout"
            android:weightSum="10">

            <LinearLayout
                android:id="@+id/profileLayout"
                android:layout_width="match_parent"
                android:layout_height="307dp"
                android:orientation="vertical"
                android:layout_weight="8.28"
                tools:ignore="InefficientWeight">

                <LinearLayout
                    android:layout_width="332dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="5dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/userName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Mr User"
                        android:textAlignment="gravity"
                        android:textColor="@color/colorText"
                        android:textSize="30sp"
                        tools:ignore="HardcodedText" />

                    <TextView
                        android:id="@+id/yourFavorite"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/choice"
                        android:textAlignment="gravity"
                        android:textColor="@color/colorText"
                        android:textSize="15sp" />
                </LinearLayout>

                <ListView
                    android:id="@+id/listviewFood"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="40dp"
                    android:layout_marginEnd="40dp"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="40dp"
                    android:background="@android:color/white" />
            </LinearLayout>

            <Button
                android:id="@+id/viewTokenButton"
                android:layout_width="252dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="7dp"
                android:background="@color/colorButton"
                android:onClick="onTokenViewClick"
                android:text="@string/view_token"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="15sp" />

        </LinearLayout>
    </RelativeLayout>

    <ProgressBar
        android:id="@+id/loadingSpinner"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="invisible"
        tools:visibility="invisible" />

</RelativeLayout>
